# helencore

./: .gitignore  .vimrc  meson.build
hcsrc/: Any.h  Blast.h  Canonical.cpp  Canonical.h  Converter.cpp  Converter.h  Fibonacci.cpp  Fibonacci.h  FileReader.cpp  FileReader.h  Matrix.cpp  Matrix.h  RefineMat3x3.h  RefinementGridSearch.cpp  RefinementLBFGS.cpp  RefinementNelderMead.cpp  RefinementNelderMead.h  RefinementStepSearch.h  RefinementStrategy.cpp  RefinementStrategy.h  Timer.cpp  Timer.h  mat3x3.cpp  mat3x3.h  mat4x4.cpp  mat4x4.h  maths.cpp  maths.h  vec3.cpp  vec3.h
